8285835: SIGSEGV in PhaseIdealLoop::build_loop_late_post_work

Reviewed-by: mdoerr
Backport-of: 8aa1526b443025b8606a3668262f46a9cb6ea6f6